fix(3163904759): align transfer button to figma

--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -28,7 +28,7 @@
 
   &.isDisabled {
     pointer-events: none;
-    opacity: 0.3;
+    opacity: 0.5;
   }
 
   &.isLoading {
